# langindex

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-CONTENT.md  README.md  astro.config.mjs  compose.yaml  justfile  package.json  playwright.config.ts  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: content-correction.yml  language-request.yml
.github/workflows/: ci.yml
crates/langindex-site/: Cargo.toml
crates/langindex-site/assets/: style.css
crates/langindex-site/src/: assets.rs  content.rs  lib.rs  main.rs  pages.rs
deploy/caddy/: Caddyfile  langindex.host.caddy
docs/: content-model.md  deployment.md  editorial-standard.md  local-development.md  sources.md
docs/rewrite/: phase-16-5-inventory.md
docs/templates/: comparison-page.mdx  language-page.mdx
public/: site.webmanifest
scripts/: check-external-links.mjs  check-internal-links.mjs  validate-sources.mjs
src/: content.config.ts
src/components/language/: LanguageCard.astro
src/components/layout/: BrandBanner.astro  SourceList.astro  ThemeToggle.astro
src/components/search/: PagefindSearch.astro
src/content/comparisons/: abap-vs-java-for-enterprise-systems.mdx  abap-vs-sql-for-business-data-logic.mdx  ada-vs-cpp.mdx  ada-vs-rust.mdx  assembly-vs-c.mdx  c-vs-cpp.mdx  cfml-vs-java-for-legacy-web-modernization.mdx  cfml-vs-php.mdx  clojure-vs-java.mdx  clojure-vs-scala.mdx  cobol-vs-java-for-enterprise-modernization.mdx  common-lisp-vs-clojure.mdx  cpp-vs-java.mdx  crystal-vs-go.mdx  crystal-vs-ruby.mdx  csharp-vs-typescript.mdx  d-vs-cpp.mdx  (+78 more)
src/layouts/: BaseLayout.astro
src/lib/: language-registry.ts
src/pages/: about.astro  contribute.astro  index.astro  languages.json.ts  robots.txt.ts  rss.xml.ts  sitemap.xml.ts
src/styles/: global.css
tests/playwright/: accessibility.spec.ts  smoke.spec.ts
(+134 files in other folders)
