[workspace]
members = ["crates/langindex-site"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/dunamismax/langindex"
rust-version = "1.95"
homepage = "https://langindex.dev/"
readme = "README.md"

[workspace.dependencies]
ammonia = "4.1.2"
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
leptos = { version = "0.8.19", features = ["ssr"] }
pulldown-cmark = "0.13.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression-br", "compression-gzip", "fs", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

