[package]
name = "langindex-site"
description = "Axum and Leptos SSR site service for LangIndex."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "langindex-site"
path = "src/main.rs"

[dependencies]
ammonia.workspace = true
axum.workspace = true
chrono.workspace = true
leptos.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
http-body-util = "0.1.3"
tower = { workspace = true, features = ["util"] }

